# HelixDesk

./: .gitignore  HelixDesk.spec  README.md  main.py  pyproject.toml  start.bat
helixdesk/: __init__.py  __main__.py  app.py  database.py  database.py.bak
scripts/: build.bat
web/: app.js  index.html  styles.css
