[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "helixdesk"
version = "2.0.0"
description = "HelixDesk - 精简版电子实验记录本 (ELN)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6.0"]

[project.scripts]
helixdesk = "helixdesk.app:main"

[tool.setuptools.packages.find]
include = ["helixdesk*"]
